# spellcheck

./: .gitignore  Vagrantfile
src/: CMakeLists.txt
src/cmake/Modules/: CodeCoverage.cmake
src/dict-check/: CMakeLists.txt  dict-check.c
src/dictionary/: CMakeLists.txt  dictionary.c  dictionary.h  dictionary_test.c  hints_generator.c  hints_generator.h  map.c  map.h  map_test.c  node.c  node.h  node_test.c  rule.c  rule.h  rule_test.c  set.c  set.h  set_test.c  state.c  state.h  trie.c  trie.h  trie_test.c  utils.h  vector.c  vector.h  vector_test.c  word_list.c  word_list.h  word_list_test.c
src/gtk-editor/: extra.c
src/io/: CMakeLists.txt  io.c  io.h  utils.h
